# home-tools-rs

./: Cargo.toml
.zed/: tasks.json
app/: Cargo.toml
app/src/: main.rs
app/src/app/: app.rs  mod.rs  services.rs
app/src/tools/: mod.rs  tool.rs
app/src/tools/about/: about_tool.rs  mod.rs
app/src/tools/home/: home_tool.rs  mod.rs
app/src/tools/online_counters/: mod.rs  online_counters_tool.rs  online_grid.rs
app/src/ui/: mod.rs
app/src/ui/ds/: colors.rs  fonts.rs  geometry.rs  mod.rs  shadows.rs  space.rs  strokes.rs  text_styles.rs  theme.rs
app/src/ui/widgets/: dot_grid.rs  mod.rs  tool_button.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/api/: mod.rs  online.rs  online_devices.rs
shared/src/rest_client/: api_request.rs  endpoint.rs  mod.rs  request.rs  response.rs  rest_client.rs
shared/src/tools/: display_name.rs  loading.rs  mod.rs
src/: main.rs
src/api/: client.rs  mod.rs
src/models/: config.rs
src/ui/: dot_grid.rs  ds.rs  loading.rs  main.rs  mod.rs  services.rs
