[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", features = ["ehttp"] }

egui = "0.31"
ehttp = "0.5.0"
eframe = { version = "0.31", default-features = false, features = [
  "default_fonts", # Embed the default egui fonts.
  "glow",          # Use the glow rendering backend. Alternative: "wgpu".
  "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

egui-phosphor = { version = "0.9", features = ["thin", "bold"] }
chrono = { version = "0.4", features = ["serde"] }
